--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,9 @@
       "use": "@vercel/node"
     },
     {
-      "src": "./my-mern-app/dist/**",
-      "use": "@vercel/static"
+      "src": "./my-mern-app/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
@@ -18,6 +19,13 @@
     {
       "src": "/(.*)",
       "dest": "/my-mern-app/dist/$1"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/my-mern-app/dist/index.html"
     }
   ]
 }
